Корректировка путей к картинкам

--- a/scss/blocks/_tachen.scss
+++ b/scss/blocks/_tachen.scss
@@ -4,7 +4,7 @@
 	}
 }
 .tachen {
-	background-image: url("../../img/tachen.jpg");
+	background-image: url("../img/tachen.jpg");
 	background-position: center center;
 	background-repeat: no-repeat;
 	@media (max-width: 1360px) {
