--- a/scss/blocks/_trend.scss
+++ b/scss/blocks/_trend.scss
@@ -1,5 +1,5 @@
 .trend {
-	background-image: url("../../img/trend.png");
+	background-image: url("../img/trend.png");
 	background-position: center center;
 	background-repeat: no-repeat;
 
